--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Create Artifact file
         run: |
           echo Hello World from me > $ARTIFACT_NAME.txt
+          ls
+          cat $ARTIFACT_NAME.txt
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
