--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -21,8 +21,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: hello-file
-          path: $ARTIFACT_NAME.txt
+          path: hello-world.txt
   job2:
     name: job_two
     needs: [job1]
