--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -31,5 +31,5 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@v3
         with:
-          name: hello2
+          name: hello
           path: hello.txt
