--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -33,3 +33,24 @@ jobs:
         with:
           name: hello
           path: hello.txt
+  job3:
+    name: job_three
+    needs: [job2]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Display ENV variables
+        run: |
+          echo $GITHUB_WORKFLOW
+          echo $GITHUB_ACTION
+          echo $GITHUB_ACTOR
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_EVENT_NAME
+          echo $GITHUB_EVENT_PATH
+          echo $GITHUB_WORKSPACE
+          echo $GITHUB_SHA
+          echo $GITHUB_REF
+          echo $HOME
+          
+          
+          
+        
